--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -12,7 +12,124 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "source": [
+        "!pip install -U transformers\n",
+        "!pip install -U accelerate\n",
+        "!pip install -U datasets\n",
+        "!pip install -U bertviz\n",
+        "!pip install -U umap-learn\n",
+        "!pip install -U sentencepiece\n",
+        "!pip install -U urllib3\n",
+        "!pip install py7zr"
+      ],
+      "metadata": {
+        "id": "-2NcRvOtzVIw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "# Comparative Analysis of Dialogue Summarization: Seq2Seq Transformer vs. Advanced Architectures like BART and T5\n",
+        "\n",
+        "**Group Name: Able Elba**\n",
+        "\n",
+        "|       Name      | Email Address | Student ID|\n",
+        "|-----------------|---------------|-----------|\n",
+        "| Dipankar Srirag | z5437514@ad.unsw.edu.au | z5437514 |\n",
+        "| Pratyush Ravindrakumar Panda | z5410294@ad.unsw.edu.au | z5410294 |\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "10sCmmSRWWgc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Table of Contents\n",
+        "\n",
+        "1. [Introduction](##Introduction)\n",
+        "    - [Motivation](###Motivation)\n",
+        "    - [Problem Statement](###Problem-Statement)\n",
+        "2. [Data Sources](##DataSources)\n",
+        "3. [Methodology](#Methodology)\n",
+        "    - [Dataset Description](#Dataset-Description)\n",
+        "    - [Model Architecture](#Model-Architecture)\n",
+        "        - [Seq2Seq Transformer](#Seq2Seq-Transformer)\n",
+        "        - [BART](#BART)\n",
+        "        - [T5](#T5)\n",
+        "    - [Training Approach](#Training-Approach)\n",
+        "4. [Experiment and Results](#Experiment-and-Results)\n",
+        "    - [Experimental Setup](#Experimental-Setup)\n",
+        "    - [Performance Metrics](#Performance-Metrics)\n",
+        "    - [Results Analysis](#Results-Analysis)\n",
+        "5. [Discussion](#Discussion)\n",
+        "    - [Model Comparison](#Model-Comparison)\n",
+        "    - [Implications](#Implications)\n",
+        "6. [Conclusion](#Conclusion)\n",
+        "    - [Summary of Findings](#Summary-of-Findings)\n",
+        "    - [Future Work](#Future-Work)\n",
+        "7. [References](#References)\n",
+        "8. [Appendix](#Appendix)\n",
+        "    - [Code](#Code)\n",
+        "    - [Additional Data](#Additional-Data)"
+      ],
+      "metadata": {
+        "id": "Uh986XWsYtOE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Introduction\n",
+        "\n",
+        "This project aims to conduct a comprehensive comparative analysis of different approaches to dialog summarization, focusing on the effectiveness of a static embedding-based Seq2Seq Transformer model against more complex transformer architectures, such as BART and T5.\n",
+        "\n",
+        "### Problem Statement:\n",
+        "Dialog summarization is an essential aspect of Natural Language Processing (NLP), aimed at condensing conversations or dialogues into concise summaries without losing the context or essential information. The challenge lies in accurately capturing the nuances and key points of dialogues, which can be complex and multi-threaded. This project seeks to understand and evaluate how different model architectures - particularly, a simpler Seq2Seq Transformer with static embeddings versus more advanced and dynamic models like BART (Bidirectional and Auto-Regressive Transformers) and T5 (Text-to-Text Transfer Transformer) - perform in the task of dialog summarization.\n",
+        "\n",
+        "### Motivation\n",
+        "\n",
+        "The motivation for this comparative study of dialogue summarization models stems from a keen interest in exploring the capabilities of different embedding techniques within transformer architectures, particularly focusing on the contrast between static embeddings and context-aware embeddings.\n",
+        "\n",
+        "1. **Exploration of Static vs. Context-Aware Embeddings:** This project is driven by a curiosity to understand how static embeddings, like GloVe, which are pre-trained on large corpora but lack contextual sensitivity, perform in comparison to the dynamic, context-aware embeddings used in advanced models like BART and T5. While context-aware embeddings are designed to adapt to the specific nuances of the input text, static embeddings offer a fixed representation of words irrespective of their context. This investigation seeks to unravel how these fundamentally different approaches to language understanding affect the quality of dialog summarization.\n",
+        "\n",
+        "2. **Contributing to the Understanding of Embedding Technologies:** Through this exploratory study, there is an opportunity to contribute valuable findings to the field of NLP regarding the efficacy of different embedding technologies. The results of this comparison could inform future research and development in NLP, particularly in the selection and optimization of embedding techniques for various language processing tasks.\n",
+        "\n",
+        "In summary, this project is driven by a genuine curiosity to explore and understand the performance dynamics of static and context-aware embeddings in dialogue summarization, thereby enriching our understanding of embedding technologies in NLP, and assist researchers and practitioners in choosing the most suitable model for their specific needs and constraints."
+      ],
+      "metadata": {
+        "id": "iNwosuBmehLT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Sources\n",
+        "\n",
+        "For this project, we are utilizing the DialogSum dataset, a comprehensive and large-scale dialogue summarization resource. This dataset encompasses 13,460 dialogues, each paired with manually labeled summaries and topics, providing a robust foundation for our study. The following details offer a clear guide to accessing and understanding this dataset:\n",
+        "\n",
+        "1. **Primary Source:** The DialogSum dataset is available through its original repository, which can be found at [DialogSum GitHub Repository](https://github.com/cylnlp/DialogSum). This source is used to construct a custom pipeline for our seq2seq model.\n",
+        "\n",
+        "2. **Secondary Source for Pretrained Models:** For the purpose of fine-tuning the pretrained models like BART and T5, the DialogSum dataset is also accessible via the Hugging Face Datasets library, specifically at [DialogSum on Hugging Face](https://huggingface.co/datasets/knkarthick/dialogsum). This version is tailored for integration with pretrained models.\n",
+        "\n",
+        "3. **Dataset Characteristics:** DialogSum stands out from other dialogue datasets, such as SAMSUM, due to its meticulous preprocessing. This preprocessing includes the correction of grammatical errors in the dialogues and the provision of well-annotated summaries in formal language. Such refinement enhances the dataset's utility for our project. The dataset also provides a hidden test set to perform summarisation on completely new unnanotated dialogues.\n",
+        "\n",
+        "4. **Empirical Study Reference:** An empirical study assessing the performance of Large Language Models (LLMs) on the DialogSum dataset is detailed in the corresponding [research paper](https://aclanthology.org/2021.findings-acl.449.pdf). This paper offers valuable insights and benchmarks that can inform and guide our analysis.\n",
+        "\n",
+        "By leveraging the DialogSum dataset from these specified sources, our project is positioned to conduct a thorough and informed comparison of the Seq2Seq Transformer model with static embeddings against advanced models like BART and T5, which employ context-aware embeddings."
+      ],
+      "metadata": {
+        "id": "pvWONjWHxK-b"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "DWemnrRfBIXo",
         "outputId": "bc13cf98-0bf8-47f2-f22a-108cd4df8e72",
@@ -61,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "6O_O1498B59n"
       },
@@ -197,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "CWewwreCvx1b"
       },
@@ -331,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "uP7le4_lEom5"
       },
@@ -339,7 +456,7 @@
       "source": [
         "def train(train_dataloader, val_dataloader, encoder, decoder, n_epochs, learning_rate=0.001, momentum=0.9):\n",
         "\n",
-        "    # Using SGD with momentum\n",
+        "    # Using Adam\n",
         "    model_type = \"Final\" if encoder.bidirectional else \"Lite\"\n",
         "    encoder_optimizer = optim.Adam(\n",
         "        encoder.parameters(), lr=learning_rate)\n",
@@ -348,9 +465,9 @@
         "        decoder.parameters(), lr=learning_rate)\n",
         "\n",
         "    scheduler_encoder = optim.lr_scheduler.StepLR(\n",
-        "        encoder_optimizer, step_size=10, gamma=0.5)\n",
+        "        encoder_optimizer, step_size=10, gamma=0.5, verbose = True)\n",
         "    scheduler_decoder = optim.lr_scheduler.StepLR(\n",
-        "        decoder_optimizer, step_size=10, gamma=0.5)\n",
+        "        decoder_optimizer, step_size=10, gamma=0.5, verbose = True)\n",
         "    criterion = nn.CrossEntropyLoss(ignore_index=PAD_IDX)\n",
         "\n",
         "    train_losses = []\n",
@@ -411,7 +528,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "RUdVDa01BIXr"
       },
@@ -437,7 +554,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "Ei-Gwx8DBIXs"
       },
@@ -490,7 +607,7 @@
       "metadata": {
         "id": "4rcrj3A0KCQU"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -502,7 +619,7 @@
       "metadata": {
         "id": "8Uwa3nJ5KX_U"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -523,7 +640,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,7 +660,7 @@
       "metadata": {
         "id": "rLNI6ftqLLDM"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -564,7 +681,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,7 +695,7 @@
     {
       "cell_type": "code",
       "source": [
-        "train_losses, val_losses = train(train_dataloader, val_dataloader, encoder_lite, decoder_lite, 4, 0.001)"
+        "train_losses, val_losses = train(train_dataloader, val_dataloader, encoder_lite, decoder_lite, 8, 0.001)"
       ],
       "metadata": {
         "id": "uMqEBvJQLeMc",
@@ -601,7 +718,7 @@
           ]
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -650,7 +767,7 @@
           "height": 564
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -673,7 +790,7 @@
       "metadata": {
         "id": "WzW00fd2KVFz"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -688,7 +805,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -730,7 +847,7 @@
           "height": 789
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -747,7 +864,7 @@
     {
       "cell_type": "code",
       "source": [
-        "train_losses, val_losses = train(train_dataloader, val_dataloader, encoder_final, decoder_final, 4, 0.001)"
+        "train_losses, val_losses = train(train_dataloader, val_dataloader, encoder_final, decoder_final, 8, 0.001)"
       ],
       "metadata": {
         "id": "xX_BBh55NxkB",
@@ -770,7 +887,7 @@
           ]
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -819,7 +936,7 @@
           "height": 564
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -842,7 +959,7 @@
       "metadata": {
         "id": "IFmQIHrXNCCy"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -875,7 +992,7 @@
           "height": 789
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -900,10 +1017,7 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
-      "gpuType": "V100",
-      "machine_shape": "hm",
       "provenance": [],
       "include_colab_link": true
     },
