--- a/notebooks/GloVe.ipynb
+++ b/notebooks/GloVe.ipynb
@@ -55,16 +55,16 @@
     {
      "data": {
       "text/plain": [
-       "[('perfect!', 0.19918687641620636),\n",
-       " ('peking', 0.18685618042945862),\n",
-       " ('speaking', 0.1850905865430832),\n",
-       " ('inside.', 0.1844509094953537),\n",
-       " ('chinese.', 0.17851804196834564),\n",
-       " ('24', 0.17759983241558075),\n",
-       " ('cake', 0.17517882585525513),\n",
-       " ('help', 0.17481420934200287),\n",
-       " ('education.', 0.17363373935222626),\n",
-       " ('test', 0.17225077748298645)]"
+       "[('onto', 0.18589073419570923),\n",
+       " ('buildings', 0.18523985147476196),\n",
+       " ('bungee', 0.17935125529766083),\n",
+       " ('accidents', 0.17021802067756653),\n",
+       " ('fair', 0.16874520480632782),\n",
+       " ('figures.', 0.16867220401763916),\n",
+       " ('families', 0.16840752959251404),\n",
+       " ('size.', 0.1681390255689621),\n",
+       " ('individual', 0.16532500088214874),\n",
+       " ('department?', 0.16068579256534576)]"
       ]
      },
      "execution_count": 5,
@@ -73,7 +73,7 @@
     }
    ],
    "source": [
-    "base_model.wv.most_similar('#person1#', topn=10)"
+    "base_model.wv.most_similar('what', topn=10)"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus_path = '../embeds/GloVe/glove.corpus.300d.txt'\n",
+    "corpus_path = '../embeds/GloVe/glove.840B.300d.txt'\n",
     "corpus_model = load_glove_model(corpus_path)\n",
     "base_model.build_vocab([list(corpus_model.key_to_index.keys())], update=True)"
    ]
@@ -93,18 +93,26 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/gensim/models/keyedvectors.py:849: RuntimeWarning: invalid value encountered in divide\n",
+      "  dists = dot(self.vectors[clip_start:clip_end], mean) / self.norms[clip_start:clip_end]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[('tells', 0.5800400376319885),\n",
-       " ('asks', 0.5097846984863281),\n",
-       " ('#person2#', 0.44948500394821167),\n",
-       " ('thinks', 0.4351900815963745),\n",
-       " ('suggests', 0.42950737476348877),\n",
-       " ('<sos>', 0.40993642807006836),\n",
-       " ('recommends', 0.4068792760372162),\n",
-       " ('s', 0.3993434011936188),\n",
-       " (\"#person2#'\", 0.3977951109409332),\n",
-       " ('wants', 0.3972680866718292)]"
+       "[('why', 0.8907533884048462),\n",
+       " ('how', 0.8789804577827454),\n",
+       " ('know', 0.8698911666870117),\n",
+       " ('think', 0.8441894054412842),\n",
+       " ('something', 0.8239272236824036),\n",
+       " ('thing', 0.8229970335960388),\n",
+       " ('that', 0.8225524425506592),\n",
+       " ('exactly', 0.8140221238136292),\n",
+       " ('thought', 0.8101893663406372),\n",
+       " ('tell', 0.8013006448745728)]"
       ]
      },
      "execution_count": 7,
@@ -113,7 +121,7 @@
     }
    ],
    "source": [
-    "corpus_model.most_similar('#person1#', topn=10)"
+    "corpus_model.most_similar('what', topn=10)"
    ]
   },
   {
@@ -123,7 +131,7 @@
    "outputs": [],
    "source": [
     "base_model.train(tokens, total_examples=total_examples, epochs=base_model.epochs)\n",
-    "base_model_wv = base_model.wv\n"
+    "base_model_wv = base_model.wv"
    ]
   },
   {
@@ -134,16 +142,16 @@
     {
      "data": {
       "text/plain": [
-       "[('#person2#', 0.7265139818191528),\n",
-       " ('sam', 0.663916289806366),\n",
-       " ('kate', 0.624889075756073),\n",
-       " ('#person3#', 0.6135007739067078),\n",
-       " ('mike', 0.6108843684196472),\n",
-       " ('shirley', 0.5966283082962036),\n",
-       " ('jack', 0.5953760743141174),\n",
-       " ('alice', 0.5870617032051086),\n",
-       " ('ann', 0.5827251672744751),\n",
-       " ('lucy', 0.5810714364051819)]"
+       "[('how', 0.4596197009086609),\n",
+       " ('anything', 0.4548874795436859),\n",
+       " ('where', 0.36545345187187195),\n",
+       " (\"what's\", 0.36517012119293213),\n",
+       " ('whatever', 0.3540089428424835),\n",
+       " ('well...', 0.3507554829120636),\n",
+       " ('what?', 0.33418241143226624),\n",
+       " ('something', 0.33149653673171997),\n",
+       " ('why', 0.3289160132408142),\n",
+       " ('nothing', 0.2993703782558441)]"
       ]
      },
      "execution_count": 9,
@@ -152,12 +160,41 @@
     }
    ],
    "source": [
-    "base_model_wv.most_similar('#person1#', topn=10)"
+    "base_model_wv.most_similar('what', topn=10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(\"doesn't\", 0.5743285417556763),\n",
+       " ('did', 0.40398046374320984),\n",
+       " ('do', 0.38602036237716675),\n",
+       " (\"doesn't.\", 0.3456938564777374),\n",
+       " ('does,', 0.34460973739624023),\n",
+       " ('is', 0.3222086429595947),\n",
+       " ('needs', 0.3137502670288086),\n",
+       " ('prefers', 0.3080991506576538),\n",
+       " ('makes', 0.3018656075000763),\n",
+       " ('likes', 0.2977132797241211)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_model_wv.most_similar('does', topn=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
