--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -11,24 +11,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "!pip install -U transformers\n",
-        "!pip install -U accelerate\n",
-        "!pip install -U datasets\n",
-        "!pip install -U bertviz\n",
-        "!pip install -U umap-learn\n",
-        "!pip install -U sentencepiece\n",
-        "!pip install -U urllib3\n",
-        "!pip install py7zr"
-      ],
-      "metadata": {
-        "id": "-2NcRvOtzVIw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "\n",
@@ -129,25 +111,36 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#@title Installing libraries to the environment (Double click to see)\n",
+        "\n",
+        "!pip install -U transformers &> /dev/null\n",
+        "!pip install -U accelerate &> /dev/null\n",
+        "!pip install -U datasets &> /dev/null\n",
+        "!pip install -U bertviz &> /dev/null\n",
+        "!pip install -U umap-learn &> /dev/null\n",
+        "!pip install -U sentencepiece &> /dev/null\n",
+        "!pip install -U urllib3 &> /dev/null\n",
+        "!pip install py7zr &> /dev/null"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "-2NcRvOtzVIw"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "DWemnrRfBIXo",
-        "outputId": "bc13cf98-0bf8-47f2-f22a-108cd4df8e72",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "DWemnrRfBIXo"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
+        "#@title Importing Libraries (Double click to see)\n",
         "from __future__ import unicode_literals, print_function, division\n",
+        "from collections import Counter\n",
         "from gensim.models import KeyedVectors\n",
         "from nltk.tokenize import WordPunctTokenizer\n",
         "import pandas as pd\n",
@@ -161,12 +154,14 @@
         "from google.colab import drive\n",
         "from tqdm.notebook import tqdm\n",
         "\n",
+        "\n",
         "from io import open\n",
         "\n",
         "import time\n",
         "import math\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
         "plt.switch_backend('agg')\n",
         "\n",
         "MAX_LENGTH = 200\n",
@@ -174,6 +169,91 @@
         "drive.mount('/content/drive')\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "%matplotlib inline"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Exploring Data\n",
+        "\n",
+        "### Training Data"
+      ],
+      "metadata": {
+        "id": "X4SjEe06WyMI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_df = pd.read_json('/content/drive/My Drive/COMP9444/data/raw/dialogsum/dialogsum.train.jsonl',\n",
+        "                      lines=True)[['dialogue', 'summary']]\n",
+        "\n",
+        "train_df['dialogue_length'] = train_df['dialogue'].apply(lambda x: len(x.split()))\n",
+        "train_df['summary_length'] = train_df['summary'].apply(lambda x: len(x.split()))\n",
+        "\n",
+        "basic_stats = train_df[['dialogue_length', 'summary_length']].describe()\n",
+        "print(basic_stats)"
+      ],
+      "metadata": {
+        "id": "B55endvBRzsC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word_counts = Counter(\" \".join(train_df['dialogue']).split())\n",
+        "\n",
+        "most_common_words = word_counts.most_common(10)\n",
+        "words, counts = zip(*most_common_words)\n",
+        "\n",
+        "sns.set(style=\"whitegrid\", palette=\"pastel\")\n",
+        "plt.figure(figsize=(10, 6))\n",
+        "sns.barplot(list(words), list(counts))\n",
+        "plt.title('Top 10 Words in Dialogue')\n",
+        "plt.xlabel('Words')\n",
+        "plt.ylabel('Frequency')\n",
+        "plt.xticks(rotation=45)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "ldDP7CXoXD1Q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dev_df = pd.read_json('/content/drive/My Drive/COMP9444/data/raw/dialogsum/dialogsum.dev.jsonl',\n",
+        "                      lines=True)[['dialogue', 'summary']]"
+      ],
+      "metadata": {
+        "id": "2olOC_sgW8F1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "RUdVDa01BIXr"
+      },
+      "outputs": [],
+      "source": [
+        "train_src_tokens = list(train_df['dialogue'].apply(lambda x: tokenize(x)))\n",
+        "train_trg_tokens = list(train_df['summary'].apply(lambda x: tokenize(x)))\n",
+        "\n",
+        "dev_src_tokens = list(dev_df['dialogue'].apply(lambda x: tokenize(x)))\n",
+        "dev_trg_tokens = list(dev_df['summary'].apply(lambda x: tokenize(x)))\n",
+        "\n",
+        "train_src = [' '.join(sent) for sent in train_src_tokens]\n",
+        "train_trg = [' '.join(sent) for sent in train_trg_tokens]\n",
+        "\n",
+        "dev_src = [' '.join(sent) for sent in dev_src_tokens]\n",
+        "dev_trg = [' '.join(sent) for sent in dev_trg_tokens]"
       ]
     },
     {
@@ -524,32 +604,6 @@
         "\n",
         "def count_trainable_parameters(model):\n",
         "    return sum(p.numel() for p in model.parameters() if p.requires_grad)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "RUdVDa01BIXr"
-      },
-      "outputs": [],
-      "source": [
-        "train_df = pd.read_json('/content/drive/My Drive/COMP9444/data/raw/dialogsum/dialogsum.train.jsonl',\n",
-        "                      lines=True)[['dialogue', 'summary']]\n",
-        "dev_df = pd.read_json('/content/drive/My Drive/COMP9444/data/raw/dialogsum/dialogsum.dev.jsonl',\n",
-        "                      lines=True)[['dialogue', 'summary']]\n",
-        "\n",
-        "train_src_tokens = list(train_df['dialogue'].apply(lambda x: tokenize(x)))\n",
-        "train_trg_tokens = list(train_df['summary'].apply(lambda x: tokenize(x)))\n",
-        "\n",
-        "dev_src_tokens = list(dev_df['dialogue'].apply(lambda x: tokenize(x)))\n",
-        "dev_trg_tokens = list(dev_df['summary'].apply(lambda x: tokenize(x)))\n",
-        "\n",
-        "train_src = [' '.join(sent) for sent in train_src_tokens]\n",
-        "train_trg = [' '.join(sent) for sent in train_trg_tokens]\n",
-        "\n",
-        "dev_src = [' '.join(sent) for sent in dev_src_tokens]\n",
-        "dev_trg = [' '.join(sent) for sent in dev_trg_tokens]"
       ]
     },
     {
