--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -132,10 +132,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 42,
       "metadata": {
         "id": "DWemnrRfBIXo",
-        "outputId": "fc249d90-780c-44e5-eddc-5a971d819fe2",
+        "outputId": "1e5a9c92-8e92-4ff6-94e0-1b8c998ec577",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -168,6 +168,7 @@
         "from google.colab import drive\n",
         "from tqdm.notebook import tqdm\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "from IPython.display import display, HTML\n",
         "\n",
         "\n",
         "from io import open\n",
@@ -177,6 +178,9 @@
         "\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
+        "import warnings\n",
+        "\n",
+        "warnings.filterwarnings('ignore')\n",
         "plt.switch_backend('agg')\n",
         "\n",
         "MAX_LENGTH = 200\n",
@@ -298,12 +302,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "4ALSxE1iOPB9",
-        "outputId": "8f4d8baf-ffd6-4670-ac65-4ac9048722ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 635
-        }
+        },
+        "id": "4ALSxE1iOPB9",
+        "outputId": "8f4d8baf-ffd6-4670-ac65-4ac9048722ff"
       },
       "execution_count": 24,
       "outputs": [
@@ -350,12 +354,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "LEMn8AgYPKC8",
-        "outputId": "ce0a8f90-6550-445a-e3e8-3290cf80b22f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 601
-        }
+        },
+        "id": "LEMn8AgYPKC8",
+        "outputId": "ce0a8f90-6550-445a-e3e8-3290cf80b22f"
       },
       "execution_count": 36,
       "outputs": [
@@ -374,45 +378,92 @@
     {
       "cell_type": "code",
       "source": [
-        "def unigram_overlap(row):\n",
-        "    dialogue_words = set(row['dialogue'].split())\n",
-        "    summary_words = set(row['summary'].split())\n",
-        "    overlap = summary_words.intersection(dialogue_words)\n",
-        "    return len(overlap) / len(summary_words) * 100 if summary_words else 0\n",
-        "\n",
-        "train_df['unigram_overlap'] = train_df.apply(unigram_overlap, axis=1)\n",
-        "avg_overlap = train_df['unigram_overlap'].mean()\n",
-        "print(f\"Average unigram overlap: {avg_overlap:.2f}%\")"
-      ],
-      "metadata": {
-        "id": "JFvXIQfuR1ZT",
-        "outputId": "15b1532a-da8c-447a-98cf-8676edbb3d64",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Average unigram overlap: 48.06%\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "dev_df = pd.read_json('/content/drive/My Drive/COMP9444/data/raw/dialogsum/dialogsum.dev.jsonl',\n",
         "                      lines=True)[['dialogue', 'summary']]"
       ],
       "metadata": {
         "id": "2olOC_sgW8F1"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def unigram_overlap(row):\n",
+        "    dialogue_words = set(row['dialogue'].split())\n",
+        "    summary_words = set(row['summary'].split())\n",
+        "    overlap = summary_words.intersection(dialogue_words)\n",
+        "    return len(overlap) / len(summary_words) * 100 if summary_words else 0\n",
+        "\n",
+        "# Apply the function and calculate average for train_df\n",
+        "train_df['unigram_overlap'] = train_df.apply(unigram_overlap, axis=1)\n",
+        "avg_overlap_train = train_df['unigram_overlap'].mean()\n",
+        "\n",
+        "# Apply the function and calculate average for dev_df\n",
+        "dev_df['unigram_overlap'] = dev_df.apply(unigram_overlap, axis=1)\n",
+        "avg_overlap_dev = dev_df['unigram_overlap'].mean()\n",
+        "\n",
+        "# Create a styled DataFrame for display\n",
+        "results_df = pd.DataFrame({\n",
+        "    \"Dataset\": [\"Training Set\", \"Development Set\"],\n",
+        "    \"Average Unigram Overlap (%)\": [avg_overlap_train, avg_overlap_dev]\n",
+        "}).style.hide(axis=\"index\").set_caption(\"Average Unigram Overlap Across Datasets\").set_table_styles(\n",
+        "    [{'selector': 'caption',\n",
+        "      'props': [('color', 'tomato'), ('font-size', '16px'), ('text-align', 'center')]}]\n",
+        ")\n",
+        "\n",
+        "# Display the styled DataFrame\n",
+        "display(results_df)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "id": "JFvXIQfuR1ZT",
+        "outputId": "a8681b83-eadc-4f87-a835-aa995751a020"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<pandas.io.formats.style.Styler at 0x7952ae00bd30>"
+            ],
+            "text/html": [
+              "<style type=\"text/css\">\n",
+              "#T_d81ef caption {\n",
+              "  color: tomato;\n",
+              "  font-size: 16px;\n",
+              "  text-align: center;\n",
+              "}\n",
+              "</style>\n",
+              "<table id=\"T_d81ef\" class=\"dataframe\">\n",
+              "  <caption>Average Unigram Overlap Across Datasets</caption>\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th id=\"T_d81ef_level0_col0\" class=\"col_heading level0 col0\" >Dataset</th>\n",
+              "      <th id=\"T_d81ef_level0_col1\" class=\"col_heading level0 col1\" >Average Unigram Overlap (%)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td id=\"T_d81ef_row0_col0\" class=\"data row0 col0\" >Training Set</td>\n",
+              "      <td id=\"T_d81ef_row0_col1\" class=\"data row0 col1\" >48.060675</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td id=\"T_d81ef_row1_col0\" class=\"data row1 col0\" >Development Set</td>\n",
+              "      <td id=\"T_d81ef_row1_col1\" class=\"data row1 col1\" >45.961782</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
