--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -408,10 +408,7 @@
         "results_df = pd.DataFrame({\n",
         "    \"Dataset\": [\"Training Set\", \"Development Set\"],\n",
         "    \"Average Unigram Overlap (%)\": [avg_overlap_train, avg_overlap_dev]\n",
-        "}).style.hide(axis=\"index\").set_caption(\"Average Unigram Overlap Across Datasets\").set_table_styles(\n",
-        "    [{'selector': 'caption',\n",
-        "      'props': [('color', 'tomato'), ('font-size', '16px'), ('text-align', 'center')]}]\n",
-        ")\n",
+        "}).style.hide(axis=\"index\")\n",
         "\n",
         "# Display the styled DataFrame\n",
         "display(results_df)"
@@ -419,43 +416,37 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 130
+          "height": 111
         },
         "id": "JFvXIQfuR1ZT",
-        "outputId": "a8681b83-eadc-4f87-a835-aa995751a020"
+        "outputId": "8d6f677e-b4a9-4baa-8dbd-233b95eac177"
       },
-      "execution_count": 44,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/plain": [
-              "<pandas.io.formats.style.Styler at 0x7952ae00bd30>"
+              "<pandas.io.formats.style.Styler at 0x7951c7cefc70>"
             ],
             "text/html": [
               "<style type=\"text/css\">\n",
-              "#T_d81ef caption {\n",
-              "  color: tomato;\n",
-              "  font-size: 16px;\n",
-              "  text-align: center;\n",
-              "}\n",
               "</style>\n",
-              "<table id=\"T_d81ef\" class=\"dataframe\">\n",
-              "  <caption>Average Unigram Overlap Across Datasets</caption>\n",
+              "<table id=\"T_60def\" class=\"dataframe\">\n",
               "  <thead>\n",
               "    <tr>\n",
-              "      <th id=\"T_d81ef_level0_col0\" class=\"col_heading level0 col0\" >Dataset</th>\n",
-              "      <th id=\"T_d81ef_level0_col1\" class=\"col_heading level0 col1\" >Average Unigram Overlap (%)</th>\n",
+              "      <th id=\"T_60def_level0_col0\" class=\"col_heading level0 col0\" >Dataset</th>\n",
+              "      <th id=\"T_60def_level0_col1\" class=\"col_heading level0 col1\" >Average Unigram Overlap (%)</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <td id=\"T_d81ef_row0_col0\" class=\"data row0 col0\" >Training Set</td>\n",
-              "      <td id=\"T_d81ef_row0_col1\" class=\"data row0 col1\" >48.060675</td>\n",
+              "      <td id=\"T_60def_row0_col0\" class=\"data row0 col0\" >Training Set</td>\n",
+              "      <td id=\"T_60def_row0_col1\" class=\"data row0 col1\" >48.060675</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <td id=\"T_d81ef_row1_col0\" class=\"data row1 col0\" >Development Set</td>\n",
-              "      <td id=\"T_d81ef_row1_col1\" class=\"data row1 col1\" >45.961782</td>\n",
+              "      <td id=\"T_60def_row1_col0\" class=\"data row1 col0\" >Development Set</td>\n",
+              "      <td id=\"T_60def_row1_col1\" class=\"data row1 col1\" >45.961782</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n"
