--- a/notebooks/Report.ipynb
+++ b/notebooks/Report.ipynb
@@ -204,38 +204,138 @@
     {
       "cell_type": "code",
       "source": [
+        "# Load the training data\n",
         "train_df = pd.read_json('/content/drive/My Drive/COMP9444/data/raw/dialogsum/dialogsum.train.jsonl',\n",
+        "                        lines=True)[['dialogue', 'summary']]\n",
+        "train_df['Dialogue Length'] = train_df['dialogue'].apply(lambda x: len(x.split()))\n",
+        "train_df['Summary Length'] = train_df['summary'].apply(lambda x: len(x.split()))\n",
+        "train_stats = train_df[['Dialogue Length', 'Summary Length']].describe()\n",
+        "\n",
+        "# Load the development data\n",
+        "dev_df = pd.read_json('/content/drive/My Drive/COMP9444/data/raw/dialogsum/dialogsum.dev.jsonl',\n",
         "                      lines=True)[['dialogue', 'summary']]\n",
+        "dev_df['Dialogue Length'] = dev_df['dialogue'].apply(lambda x: len(x.split()))\n",
+        "dev_df['Summary Length'] = dev_df['summary'].apply(lambda x: len(x.split()))\n",
+        "dev_stats = dev_df[['Dialogue Length', 'Summary Length']].describe()\n",
         "\n",
-        "train_df['dialogue_length'] = train_df['dialogue'].apply(lambda x: len(x.split()))\n",
-        "train_df['summary_length'] = train_df['summary'].apply(lambda x: len(x.split()))\n",
+        "# Combine the statistics\n",
+        "combined_stats = pd.concat([train_stats, dev_stats], axis=1, keys=['Train', 'Dev'])\n",
         "\n",
-        "basic_stats = train_df[['dialogue_length', 'summary_length']].describe()\n",
-        "print(basic_stats)"
+        "# Format and display the combined DataFrame\n",
+        "formatted_combined_stats = combined_stats.style.set_table_styles([\n",
+        "    {'selector': 'th', 'props': [('font-size', '12pt')]},\n",
+        "    {'selector': 'table', 'props': [('margin-left', 'auto'), ('margin-right', 'auto')]}  # Centering the table\n",
+        "]).set_properties(**{'text-align': 'center'})  # Centering the text\n",
+        "\n",
+        "formatted_combined_stats"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 368
         },
         "id": "B55endvBRzsC",
-        "outputId": "88e9a65a-ab90-460b-cc83-bea50d5d4a7c"
+        "outputId": "97cf0aac-37bd-4c3b-f805-8c3afef4de09"
       },
-      "execution_count": 3,
+      "execution_count": 54,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "       dialogue_length  summary_length\n",
-            "count     12460.000000    12460.000000\n",
-            "mean        130.986998       22.867657\n",
-            "std          70.976634       10.705946\n",
-            "min          40.000000        5.000000\n",
-            "25%          85.000000       15.000000\n",
-            "50%         116.000000       21.000000\n",
-            "75%         163.000000       28.000000\n",
-            "max         985.000000      153.000000\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<pandas.io.formats.style.Styler at 0x7951c6d42ce0>"
+            ],
+            "text/html": [
+              "<style type=\"text/css\">\n",
+              "#T_34a4a th {\n",
+              "  font-size: 12pt;\n",
+              "}\n",
+              "#T_34a4a table {\n",
+              "  margin-left: auto;\n",
+              "  margin-right: auto;\n",
+              "}\n",
+              "#T_34a4a_row0_col0, #T_34a4a_row0_col1, #T_34a4a_row0_col2, #T_34a4a_row0_col3, #T_34a4a_row1_col0, #T_34a4a_row1_col1, #T_34a4a_row1_col2, #T_34a4a_row1_col3, #T_34a4a_row2_col0, #T_34a4a_row2_col1, #T_34a4a_row2_col2, #T_34a4a_row2_col3, #T_34a4a_row3_col0, #T_34a4a_row3_col1, #T_34a4a_row3_col2, #T_34a4a_row3_col3, #T_34a4a_row4_col0, #T_34a4a_row4_col1, #T_34a4a_row4_col2, #T_34a4a_row4_col3, #T_34a4a_row5_col0, #T_34a4a_row5_col1, #T_34a4a_row5_col2, #T_34a4a_row5_col3, #T_34a4a_row6_col0, #T_34a4a_row6_col1, #T_34a4a_row6_col2, #T_34a4a_row6_col3, #T_34a4a_row7_col0, #T_34a4a_row7_col1, #T_34a4a_row7_col2, #T_34a4a_row7_col3 {\n",
+              "  text-align: center;\n",
+              "}\n",
+              "</style>\n",
+              "<table id=\"T_34a4a\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level0\" >&nbsp;</th>\n",
+              "      <th id=\"T_34a4a_level0_col0\" class=\"col_heading level0 col0\" colspan=\"2\">Train</th>\n",
+              "      <th id=\"T_34a4a_level0_col2\" class=\"col_heading level0 col2\" colspan=\"2\">Dev</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level1\" >&nbsp;</th>\n",
+              "      <th id=\"T_34a4a_level1_col0\" class=\"col_heading level1 col0\" >Dialogue Length</th>\n",
+              "      <th id=\"T_34a4a_level1_col1\" class=\"col_heading level1 col1\" >Summary Length</th>\n",
+              "      <th id=\"T_34a4a_level1_col2\" class=\"col_heading level1 col2\" >Dialogue Length</th>\n",
+              "      <th id=\"T_34a4a_level1_col3\" class=\"col_heading level1 col3\" >Summary Length</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th id=\"T_34a4a_level0_row0\" class=\"row_heading level0 row0\" >count</th>\n",
+              "      <td id=\"T_34a4a_row0_col0\" class=\"data row0 col0\" >12460.000000</td>\n",
+              "      <td id=\"T_34a4a_row0_col1\" class=\"data row0 col1\" >12460.000000</td>\n",
+              "      <td id=\"T_34a4a_row0_col2\" class=\"data row0 col2\" >500.000000</td>\n",
+              "      <td id=\"T_34a4a_row0_col3\" class=\"data row0 col3\" >500.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_34a4a_level0_row1\" class=\"row_heading level0 row1\" >mean</th>\n",
+              "      <td id=\"T_34a4a_row1_col0\" class=\"data row1 col0\" >130.986998</td>\n",
+              "      <td id=\"T_34a4a_row1_col1\" class=\"data row1 col1\" >22.867657</td>\n",
+              "      <td id=\"T_34a4a_row1_col2\" class=\"data row1 col2\" >129.340000</td>\n",
+              "      <td id=\"T_34a4a_row1_col3\" class=\"data row1 col3\" >20.914000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_34a4a_level0_row2\" class=\"row_heading level0 row2\" >std</th>\n",
+              "      <td id=\"T_34a4a_row2_col0\" class=\"data row2 col0\" >70.976634</td>\n",
+              "      <td id=\"T_34a4a_row2_col1\" class=\"data row2 col1\" >10.705946</td>\n",
+              "      <td id=\"T_34a4a_row2_col2\" class=\"data row2 col2\" >66.144316</td>\n",
+              "      <td id=\"T_34a4a_row2_col3\" class=\"data row2 col3\" >9.769826</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_34a4a_level0_row3\" class=\"row_heading level0 row3\" >min</th>\n",
+              "      <td id=\"T_34a4a_row3_col0\" class=\"data row3 col0\" >40.000000</td>\n",
+              "      <td id=\"T_34a4a_row3_col1\" class=\"data row3 col1\" >5.000000</td>\n",
+              "      <td id=\"T_34a4a_row3_col2\" class=\"data row3 col2\" >40.000000</td>\n",
+              "      <td id=\"T_34a4a_row3_col3\" class=\"data row3 col3\" >6.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_34a4a_level0_row4\" class=\"row_heading level0 row4\" >25%</th>\n",
+              "      <td id=\"T_34a4a_row4_col0\" class=\"data row4 col0\" >85.000000</td>\n",
+              "      <td id=\"T_34a4a_row4_col1\" class=\"data row4 col1\" >15.000000</td>\n",
+              "      <td id=\"T_34a4a_row4_col2\" class=\"data row4 col2\" >85.000000</td>\n",
+              "      <td id=\"T_34a4a_row4_col3\" class=\"data row4 col3\" >14.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_34a4a_level0_row5\" class=\"row_heading level0 row5\" >50%</th>\n",
+              "      <td id=\"T_34a4a_row5_col0\" class=\"data row5 col0\" >116.000000</td>\n",
+              "      <td id=\"T_34a4a_row5_col1\" class=\"data row5 col1\" >21.000000</td>\n",
+              "      <td id=\"T_34a4a_row5_col2\" class=\"data row5 col2\" >115.000000</td>\n",
+              "      <td id=\"T_34a4a_row5_col3\" class=\"data row5 col3\" >18.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_34a4a_level0_row6\" class=\"row_heading level0 row6\" >75%</th>\n",
+              "      <td id=\"T_34a4a_row6_col0\" class=\"data row6 col0\" >163.000000</td>\n",
+              "      <td id=\"T_34a4a_row6_col1\" class=\"data row6 col1\" >28.000000</td>\n",
+              "      <td id=\"T_34a4a_row6_col2\" class=\"data row6 col2\" >161.000000</td>\n",
+              "      <td id=\"T_34a4a_row6_col3\" class=\"data row6 col3\" >26.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_34a4a_level0_row7\" class=\"row_heading level0 row7\" >max</th>\n",
+              "      <td id=\"T_34a4a_row7_col0\" class=\"data row7 col0\" >985.000000</td>\n",
+              "      <td id=\"T_34a4a_row7_col1\" class=\"data row7 col1\" >153.000000</td>\n",
+              "      <td id=\"T_34a4a_row7_col2\" class=\"data row7 col2\" >472.000000</td>\n",
+              "      <td id=\"T_34a4a_row7_col3\" class=\"data row7 col3\" >65.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
         }
       ]
     },
@@ -329,26 +429,24 @@
         "sns.set(style=\"whitegrid\", palette=\"pastel\")\n",
         "plt.figure(figsize=(12, 6))\n",
         "\n",
-        "quantiles_dialogue = train_df['dialogue_length'].quantile([0.25, 0.5, 0.75])\n",
-        "quantiles_summary = train_df['summary_length'].quantile([0.25, 0.5, 0.75])\n",
+        "quantiles_dialogue = train_df['Dialogue Length'].quantile([0.25, 0.5, 0.75])\n",
+        "quantiles_summary = train_df['Summary Length'].quantile([0.25, 0.5, 0.75])\n",
         "\n",
         "plt.subplot(1, 2, 1)\n",
-        "sns.histplot(train_df['dialogue_length'], kde=True, color = 'tomato')\n",
+        "sns.histplot(train_df['Dialogue Length'], kde=True, color = 'tomato')\n",
         "plt.title('Distribution of Dialogue Lengths')\n",
         "plt.xlabel('Number of Words')\n",
         "plt.ylabel('Frequency')\n",
         "for quantile in quantiles_dialogue:\n",
         "    plt.axvline(quantile, color='black', linestyle='--')\n",
-        "# plt.legend({'Quantiles': 'black'})\n",
         "\n",
         "plt.subplot(1, 2, 2)\n",
-        "sns.histplot(train_df['summary_length'], kde=True, color = 'skyblue')\n",
+        "sns.histplot(train_df['Summary Length'], kde=True, color = 'skyblue')\n",
         "plt.title('Distribution of Summary Lengths')\n",
         "plt.xlabel('Number of Words')\n",
         "plt.ylabel('Frequency')\n",
         "for quantile in quantiles_summary:\n",
         "    plt.axvline(quantile, color='black', linestyle='--')\n",
-        "# plt.legend({'Quantiles': 'black'})\n",
         "\n",
         "plt.tight_layout()\n",
         "plt.show()"
@@ -359,9 +457,9 @@
           "height": 601
         },
         "id": "LEMn8AgYPKC8",
-        "outputId": "ce0a8f90-6550-445a-e3e8-3290cf80b22f"
+        "outputId": "05e8c99f-347f-40e9-f913-64808c58f282"
       },
-      "execution_count": 36,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "display_data",
@@ -379,12 +477,105 @@
       "cell_type": "code",
       "source": [
         "dev_df = pd.read_json('/content/drive/My Drive/COMP9444/data/raw/dialogsum/dialogsum.dev.jsonl',\n",
-        "                      lines=True)[['dialogue', 'summary']]"
+        "                      lines=True)[['dialogue', 'summary']]\n",
+        "\n",
+        "dev_df['Dialogue Length'] = dev_df['dialogue'].apply(lambda x: len(x.split()))\n",
+        "dev_df['Summary Length'] = dev_df['summary'].apply(lambda x: len(x.split()))\n",
+        "\n",
+        "basic_stats = dev_df[['Dialogue Length', 'Summary Length']].describe()\n",
+        "formatted_stats = basic_stats.style.set_table_styles(\n",
+        "    [{'selector': 'th', 'props': [('font-size', '12pt')]}]\n",
+        ")\n",
+        "\n",
+        "formatted_stats"
       ],
       "metadata": {
-        "id": "2olOC_sgW8F1"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 333
+        },
+        "id": "2olOC_sgW8F1",
+        "outputId": "4ccec203-dfac-4d77-bcc1-bf404f8ae36f"
       },
-      "execution_count": 38,
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<pandas.io.formats.style.Styler at 0x7951c71d9ed0>"
+            ],
+            "text/html": [
+              "<style type=\"text/css\">\n",
+              "#T_9bd69 th {\n",
+              "  font-size: 12pt;\n",
+              "}\n",
+              "</style>\n",
+              "<table id=\"T_9bd69\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th class=\"blank level0\" >&nbsp;</th>\n",
+              "      <th id=\"T_9bd69_level0_col0\" class=\"col_heading level0 col0\" >Dialogue Length</th>\n",
+              "      <th id=\"T_9bd69_level0_col1\" class=\"col_heading level0 col1\" >Summary Length</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th id=\"T_9bd69_level0_row0\" class=\"row_heading level0 row0\" >count</th>\n",
+              "      <td id=\"T_9bd69_row0_col0\" class=\"data row0 col0\" >500.000000</td>\n",
+              "      <td id=\"T_9bd69_row0_col1\" class=\"data row0 col1\" >500.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_9bd69_level0_row1\" class=\"row_heading level0 row1\" >mean</th>\n",
+              "      <td id=\"T_9bd69_row1_col0\" class=\"data row1 col0\" >129.340000</td>\n",
+              "      <td id=\"T_9bd69_row1_col1\" class=\"data row1 col1\" >20.914000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_9bd69_level0_row2\" class=\"row_heading level0 row2\" >std</th>\n",
+              "      <td id=\"T_9bd69_row2_col0\" class=\"data row2 col0\" >66.144316</td>\n",
+              "      <td id=\"T_9bd69_row2_col1\" class=\"data row2 col1\" >9.769826</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_9bd69_level0_row3\" class=\"row_heading level0 row3\" >min</th>\n",
+              "      <td id=\"T_9bd69_row3_col0\" class=\"data row3 col0\" >40.000000</td>\n",
+              "      <td id=\"T_9bd69_row3_col1\" class=\"data row3 col1\" >6.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_9bd69_level0_row4\" class=\"row_heading level0 row4\" >25%</th>\n",
+              "      <td id=\"T_9bd69_row4_col0\" class=\"data row4 col0\" >85.000000</td>\n",
+              "      <td id=\"T_9bd69_row4_col1\" class=\"data row4 col1\" >14.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_9bd69_level0_row5\" class=\"row_heading level0 row5\" >50%</th>\n",
+              "      <td id=\"T_9bd69_row5_col0\" class=\"data row5 col0\" >115.000000</td>\n",
+              "      <td id=\"T_9bd69_row5_col1\" class=\"data row5 col1\" >18.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_9bd69_level0_row6\" class=\"row_heading level0 row6\" >75%</th>\n",
+              "      <td id=\"T_9bd69_row6_col0\" class=\"data row6 col0\" >161.000000</td>\n",
+              "      <td id=\"T_9bd69_row6_col1\" class=\"data row6 col1\" >26.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th id=\"T_9bd69_level0_row7\" class=\"row_heading level0 row7\" >max</th>\n",
+              "      <td id=\"T_9bd69_row7_col0\" class=\"data row7 col0\" >472.000000</td>\n",
+              "      <td id=\"T_9bd69_row7_col1\" class=\"data row7 col1\" >65.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "aPT7_JJIVRqQ"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
